--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -446,7 +446,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="kr-sg-checkbox col-2 pl-5 pr-0 m-0">
+                <div class="kr-sg-checkbox col-2 pl-5 pr-0 m-0 d-none">
                     <input id="checkbox-1" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isDynamic">
                     <label for="checkbox-1" class="checkbox-custom-label">Dynamic</label>
                 </div>  
@@ -472,7 +472,7 @@
                     <label for="checkbox_grpfd" class="checkbox-custom-label">Multi-Valued</label>
                 </div>
             </div>
-            <div class="kr-sg-input-text col-10 p-0">
+            <div class="kr-sg-input-text col-10 p-0  d-none">
                 <div class="label-text">Default Value (Optional)</div>
                 <input type="text" placeholder="Add value here" class="input-text" [(ngModel)]="newFieldObj.defaultValue">
             </div>
