--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -388,7 +388,7 @@
                 <div class="dropdown dropdown-open">
                     <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{(simulteObj.sourceType?simulteObj.sourceType:'choose_an_option') | translate}}</button>                                            
                     <ul class="dropdown-menu content-menu">                                                                    
-                      <li (click)="changeSimulate('page','source')"><a>Page</a></li>
+                      <!-- <li (click)="changeSimulate('page','source')"><a>Page</a></li> -->
                       <li (click)="changeSimulate('faq','source')"><a>FAQs</a></li>
                       <li (click)="changeSimulate('content','source')"><a>Content</a></li>
                     </ul>
@@ -417,7 +417,7 @@
 
 <kr-modal modalType="center" modalClass="modal_popups_ addFieldModalPop"  #addFieldModalPop>   
     <div class="modal-header">
-        <div class="title">Add Field</div>
+        <div class="title">{{(newFieldObj && newFieldObj._id)?'Edit Field':'Add Field'}}</div>
         <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
     </div>
     <ng-container *ngIf="newFieldObj">
