--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -94,10 +94,10 @@
           <div class="relaxNote">{{statusObject.statusMessage}}</div>
         </div>
       </div>
-      <div class="modal-footer" [ngClass]="{'centerModel': resourceIDToOpen}">
-        <button type="button" class="kr-sg-button-primary btn_lg" data-dismiss="modal"
+      <div class="modal-footer text-right" [ngClass]="{'centerModel': resourceIDToOpen}">
+        <button type="button" class="kr-sg-button-primary btn_lg float-none ml-2 mr-0" data-dismiss="modal"
           (click)="closeStatusModal()">Ok</button>
-          <button type="button" class="kr-sg-button-secondary btn_lg " [ngClass]="{'d-none': statusObject.status==='success'}" data-dismiss="modal"
+          <button type="button" class="kr-sg-button-secondary btn_lg float-none ml-2 mr-0" [ngClass]="{'d-none': statusObject.status==='success'}" data-dismiss="modal"
           (click)="closeStatusModal()">Cancel Crawling</button>
          </div>
     </div>
