--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -489,34 +489,36 @@
             </div>
         </ng-container>
         <ng-container  *ngIf="currentView === 'grid'">
-            <div class="list-view-data">
-                <div class="row row_list">
-                    <div class="box-content" *ngFor="let source of resources | filter: [ searchSources , 'name']"
-                    (click)="openStatusSlider(source)">
-                    <div class="box">
-                      <div class="title">{{source.title || source.name}}</div>
-                      <div class="type" [ngClass]="{'doc': (source.type==='document')}">{{contentTypes[source.source] | titlecase}}</div>
-                      <div class="status-data">
-                        <div class="count-pages" *ngIf="statusObj[source.recentStatus].name == 'Success'"><span class="pagelength">{{source.extractedFaqsCount}}</span> FAQs</div>
-                        <div class="status-info" *ngIf="source.recentStatus && statusObj[source.recentStatus] && (source.recentStatus !== 'success') " [ngStyle]="{color: (source.recentStatus && statusObj[source.recentStatus])?statusObj[source.recentStatus].color:'#202124'}">
-                          <img src="assets/icons/failed-status.svg" *ngIf="statusObj[source.recentStatus].name == 'Failed'" placement="top" container='body' ngbTooltip="{{(resourcesStatusObj && resourcesStatusObj[source._id] && resourcesStatusObj[source._id].statusMessage)?resourcesStatusObj[source._id].statusMessage:''}}">
-                          <img class="inprogressLoader" src="assets/icons/ringLoading.svg"
-                            *ngIf="statusObj[source.recentStatus].name == 'In Progress'"  placement="top" container='body' ngbTooltip="{{(resourcesStatusObj && resourcesStatusObj[source._id] && resourcesStatusObj[source._id].statusMessage)?resourcesStatusObj[source._id].statusMessage:statusObj[source.recentStatus].name}}">
-                          <div class="status-name" *ngIf="statusObj[source.recentStatus].name !== 'Success'">{{statusObj[source.recentStatus].name}}</div>
+            <perfect-scrollbar class="faqScurceListScroll">
+                <div class="list-view-data">
+                    <div class="row row_list">
+                        <div class="box-content" *ngFor="let source of resources | filter: [ searchSources , 'name']"
+                        (click)="openStatusSlider(source)">
+                        <div class="box">
+                          <div class="title">{{source.title || source.name}}</div>
+                          <div class="type" [ngClass]="{'doc': (source.type==='document')}">{{contentTypes[source.source] | titlecase}}</div>
+                          <div class="status-data">
+                            <div class="count-pages" *ngIf="statusObj[source.recentStatus].name == 'Success'"><span class="pagelength">{{source.extractedFaqsCount}}</span> FAQs</div>
+                            <div class="status-info" *ngIf="source.recentStatus && statusObj[source.recentStatus] && (source.recentStatus !== 'success') " [ngStyle]="{color: (source.recentStatus && statusObj[source.recentStatus])?statusObj[source.recentStatus].color:'#202124'}">
+                              <img src="assets/icons/failed-status.svg" *ngIf="statusObj[source.recentStatus].name == 'Failed'" placement="top" container='body' ngbTooltip="{{(resourcesStatusObj && resourcesStatusObj[source._id] && resourcesStatusObj[source._id].statusMessage)?resourcesStatusObj[source._id].statusMessage:''}}">
+                              <img class="inprogressLoader" src="assets/icons/ringLoading.svg"
+                                *ngIf="statusObj[source.recentStatus].name == 'In Progress'"  placement="top" container='body' ngbTooltip="{{(resourcesStatusObj && resourcesStatusObj[source._id] && resourcesStatusObj[source._id].statusMessage)?resourcesStatusObj[source._id].statusMessage:statusObj[source.recentStatus].name}}">
+                              <div class="status-name" *ngIf="statusObj[source.recentStatus].name !== 'Success'">{{statusObj[source.recentStatus].name}}</div>
+                            </div>
+                            <div *ngIf="!(source.recentStatus && statusObj[source.recentStatus])">---</div>
+                            <div class="created-date" *ngIf="statusObj[source.recentStatus].name == 'Success'">
+                              {{source.createdOn | dateFormatPipe}}
+                            </div>
+                          </div>
+                            <div class="actions-delete">                           
+                                <span class="actions-links d-none"><img class="action_icon" src="assets/icons/sidemenu/table-refresh.svg"></span>
+                                <span class="actions-links" (click)="deleteSource(source,$event)"  ngbTooltip='Delete'><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
+                            </div>
                         </div>
-                        <div *ngIf="!(source.recentStatus && statusObj[source.recentStatus])">---</div>
-                        <div class="created-date" *ngIf="statusObj[source.recentStatus].name == 'Success'">
-                          {{source.createdOn | dateFormatPipe}}
-                        </div>
-                      </div>
-                        <div class="actions-delete">                           
-                            <span class="actions-links d-none"><img class="action_icon" src="assets/icons/sidemenu/table-refresh.svg"></span>
-                            <span class="actions-links" (click)="deleteSource(source,$event)"  ngbTooltip='Delete'><img class="action_icon" src="assets/icons/sidemenu/delete-table.svg"></span>
-                        </div>
+                      </div>          
                     </div>
-                  </div>          
-                </div>
-            </div> 
+                </div> 
+            </perfect-scrollbar>            
         </ng-container>
     </div>
 </kr-modal>
