--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.html
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.html
@@ -21,24 +21,24 @@
                 <div class="col-12 box-content">
                     <div class="full-card">
                         <div class="legends-info">
-                            <div class="content">
+                            <div class="content no-bg">
                                 <div class="title">Total Users <span class="toatlsearches"></span></div>
                                 <div class="count-data">
-                                    <span class="count"><img src="assets/icons/arrow_green.svg">80</span>
+                                    <span class="count">80<img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAQCAYAAADwMZRfAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABeSURBVHgB7c7BCcAgDAXQZIOOYDfoxh2hI3QER3AFN4j/4CGICElOgh8+YgKPEJ2M4dVSRH48SY0utDLzTZ4AfNCMFvJEAcmFaKD/bcgImJEZ0OdvCAhfYEW+ELB/Ghq8YlSvj06DAAAAAElFTkSuQmCC"></span>
                                     <span class="percentage">+12%</span>
                                 </div>
                             </div>
                             <div class="content">
                                 <div class="title">New Users <span class="withresults"></span></div>
                                 <div class="count-data">
-                                    <span class="count"><img src="assets/icons/arrow_green.svg">26</span>
+                                    <span class="count">26<img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAQCAYAAADwMZRfAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABeSURBVHgB7c7BCcAgDAXQZIOOYDfoxh2hI3QER3AFN4j/4CGICElOgh8+YgKPEJ2M4dVSRH48SY0utDLzTZ4AfNCMFvJEAcmFaKD/bcgImJEZ0OdvCAhfYEW+ELB/Ghq8YlSvj06DAAAAAElFTkSuQmCC"></span>
                                     <span class="percentage">+7%</span>
                                 </div>
                             </div>
                             <div class="content">
                                 <div class="title">Repeat Users <span class="clicks"></span></div>
                                 <div class="count-data">
-                                    <span class="count"><img src="assets/icons/arrow_green.svg">54</span>
+                                    <span class="count">54<img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABEAAAAQCAYAAADwMZRfAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABeSURBVHgB7c7BCcAgDAXQZIOOYDfoxh2hI3QER3AFN4j/4CGICElOgh8+YgKPEJ2M4dVSRH48SY0utDLzTZ4AfNCMFvJEAcmFaKD/bcgImJEZ0OdvCAhfYEW+ELB/Ghq8YlSvj06DAAAAAElFTkSuQmCC"></span>
                                     <span class="percentage">+3%</span>
                                 </div>
                             </div>
@@ -72,6 +72,37 @@
                             </div>
                         </div>
                         <div echarts [options]="heatMapChartOption" class="demo-chart-graphMode"></div>
+                        <div class="d-flex justify-content-between mt-1">
+                            <!-- <ng5-slider [(value)]="durationRange1" [(highValue)]="durationRange2" [options]="durationOptions" class="double_slider slider1" (userChangeEnd)="onUserChangeEnd('duration', $event, 'slider1')" (userChange)="onUserChange($event, 'slider1', true)"></ng5-slider> -->
+                            <div class="row m-0 bottom-row col-12">
+                                <div class="slider-sec col-6 p-0"></div>
+                                <div class="legend-sec col-6 p-0">
+                                    <div class="title">Volume Of Users</div>
+                                    <div class="legends-info">
+                                        <div class="one">
+                                            <div class="bg-color"></div>
+                                            <div class="numbers">200 -250</div>
+                                        </div>
+                                        <div class="two">
+                                            <div class="bg-color"></div>
+                                            <div class="numbers">150 -200</div>
+                                        </div>
+                                        <div class="three">
+                                            <div class="bg-color"></div>
+                                            <div class="numbers">100 -150</div>
+                                        </div>
+                                        <div class="four">
+                                            <div class="bg-color"></div>
+                                            <div class="numbers">50 -100</div>
+                                        </div>
+                                        <div class="five">
+                                            <div class="bg-color"></div>
+                                            <div class="numbers">0 -50</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-12 row m-0 p-0">
