--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.html
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.html
@@ -67,7 +67,7 @@
                 <div class="col-12 box-content">
                     <div class="full-card">
                         <div class="legends-info">
-                            <div class="content">
+                            <div class="content no-bg">
                                 <div class="title">Busy Hours<span class="toatlsearches"></span></div>
                             </div>
                         </div>
