--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
@@ -247,7 +247,7 @@
                         margin-right: 5px;
                         vertical-align: baseline;
                         background: #28A745;
-                        margin: 0 8px 0 0;
+                        margin: 0 0 0 8px;
                         border-radius: 100%;
                     }
                 }
