--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -19,7 +19,7 @@
             <perfect-scrollbar class="scroll_stage_content">
                 <ng-container *ngIf="pipeline && pipeline.length">
                     <div cdkDropList (cdkDropListDropped)="drop($event,pipeline)">
-                        <div (click)="selectStage(pipe,i)" class="field_data" *ngFor="let pipe of pipeline; let i = index;" cdkDrag [ngClass]="{'active': (currentEditIndex === i),'runningActive':(simulteObj && simulteObj.currentSimulateAnimi === i), 'runningActive2':(simulteObj && (simulteObj.currentSimulateAnimi === (i-1))), 'allRunningActive':(simulteObj &&   (i < simulteObj.totalStages))}">
+                        <div (click)="selectStage(pipe,i)" class="field_data" *ngFor="let pipe of pipeline; let i = index;" cdkDrag [ngClass]="{'active': (currentEditIndex === i),'runningActive':(simulteObj && simulteObj.simulationInprogress && simulteObj.currentSimulateAnimi === i), 'runningActive2':(simulteObj && simulteObj.simulationInprogress && (simulteObj.currentSimulateAnimi === (i-1))), 'allRunningActive':(simulteObj &&   (i < simulteObj.totalStages))}">
                             <div class="field_data" *cdkDragPreview>
                                 <div class="title text-truncate" >{{pipe.name}}</div>
                             </div>
@@ -78,8 +78,8 @@
                             <div class="desc">No search results found</div>
                         </div> 
                     </perfect-scrollbar>  
-                    <div class="footer-simulate">
-                        <span class="mr-5"> <button class="kr-sg-button-primary btn_lg" (click)="simulate()"><img src="assets/images/simulate.svg"  class="mr-1" ngbTooltip="Test the field transformations before saving the configuration" [container]='"body"'>Simulate</button><span class="ml- d-none"><img src="assets/icons/help.svg"></span></span>
+                    <div class="footer-simulate simulatebtnContainer">
+                        <span class="mr-5"> <button class="kr-sg-button-primary btn_lg" id="simulateBtn" (click)="simulate()"><img src="assets/images/simulate.svg"  class="mr-1" ngbTooltip="Test the field transformations before saving the configuration">Simulate</button><span class="ml- d-none"><img src="assets/icons/help.svg"></span></span>
                     </div>         
                 </div>
                
@@ -371,13 +371,13 @@
                  
                 </div>
             </perfect-scrollbar>    
-            <div class="footer-simulate-form">
-                <span class="float-right mr-5"><button class="kr-sg-button-primary btn_lg " (click)="simulate()" tooltipClass="metrics_tooltips m-0" ngbTooltip="Test the field transformations before saving the configuration" [container]='"body"'><img src="assets/images/simulate.svg" class="mr-1" >Simulate</button> <span class="ml-1 d-none"><img src="assets/icons/help.svg"></span></span>
-                <button class="kr-sg-button-secondary btn_lg float-right" [disabled]="!changesDetected" (click)="clearDirtyObj(true)">Cancel</button>
+            <div class="footer-simulate-form simulatebtnContainer">
+                <span class="float-right mr-5"><button class="kr-sg-button-primary btn_lg" id="simulateBtn" (click)="simulate()" tooltipClass="metrics_tooltips m-0" ngbTooltip="Test the field transformations before saving the configuration" [container]='"body"'><img src="assets/images/simulate.svg" class="mr-1" >Simulate</button> <span class="ml-1 d-none"><img src="assets/icons/help.svg"></span></span>
+                <button class="kr-sg-button-secondary btn_lg float-right" id="cancleUnsavedChanges" [disabled]="!changesDetected" (click)="clearDirtyObj(true)">Cancel</button>
             </div> 
         </div>          
     </div>
-    <div class="simulator-div " *ngIf="simulteObj && simulteObj.showSimulation"> 
+    <div class="simulator-div" *ngIf="simulteObj && simulteObj.showSimulation"> 
         <div class="header">
             <div class="title">Simulator</div>
             <div class="close_icon"><img src="assets/images/close.svg" (click)="closeSimulator()"></div>
@@ -456,11 +456,11 @@
             <div class="group-checkbox mb-3">
                 <div class="label-text mb-2">Select ones that apply</div>
                 <div class="kr-sg-checkbox">
-                    <input id="checkbox_grpd" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isStored">
+                    <input id="checkbox_grpd" [disabled]="newFieldObj.isIndexed" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isStored">
                     <label for="checkbox_grpd" class="checkbox-custom-label">Stored</label>
                 </div>
                 <div class="kr-sg-checkbox">
-                    <input id="checkbox_grpe" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isIndexed">
+                    <input id="checkbox_grpe" class="checkbox-custom" type="checkbox" [(ngModel)]="newFieldObj.isIndexed" (change)="newFieldObj.isIndexed?(newFieldObj.isStored=true):return">
                     <label for="checkbox_grpe" class="checkbox-custom-label">Indexed</label>
                 </div>
                 <div class="kr-sg-checkbox">
